src/styles/App.scss
@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200;400;500;700&display=swap');

@font-face {
    font-family: "Circular";
    src: url(/assets/fonts/lineto-circular-pro-book.ttf);

}

@font-face {
    font-family: "Circular";
    src: url(/assets/fonts/lineto-circular-pro-medium.ttf);
    font-weight: 500;
}

@font-face {
    font-family: "Circular";
    src: url(/assets/fonts/lineto-circular-pro-bold.ttf);
    font-weight: 600;
}

@font-face {
    font-family: "Circular";
    src: url(/assets/fonts/lineto-circular-black.ttf);
    font-weight: 800;
}

#root {
    min-height: 100vh;
    display: flex;
    position: relative;
    overflow: hidden;
}

:root {
    --frost: #fcfcff;
    --link: #b8b8b8;
    --link-hover: rgb(255, 235, 59);;
}

body {
    background-color: #2b2a2a;
    color: var(--frost);
    font-family: 'Circular', 'Barlow', sans-serif;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
}

a {
    color: var(--link)
}

a:hover {
    color: var(--link-hover);
    font-weight: 500;
    text-decoration: none;
    transition: all 0.2s ease-in-out;
}

no-scrollbar {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */  
    &::-webkit-scrollbar {
        display: none; /* Chrome, Safari and Opera */
    }
}
  

.image-bg {
    z-index: -1;
    position: absolute;
    left: 0px;
    width: 100%;
    object-fit: cover;
}

@media (max-width: 880px) {
    .image-bg {
        height: 100%;
    }
}

.submit-bg {
    height: 100%
}

.cursor-pointer {
    cursor: pointer;
}

.file-picker {
    transition: all 0.2s ease-in-out;
    height: 4em !important;
    
    span {
        opacity: 0.7;
    }

    &:hover {
        color: var(--link-hover);
        opacity: 1;
        border: 2px solid var(--link-hover) !important;

        span {
            opacity: 1
        }
    }
}

.no-dimensions {
    width: 0px;
    height: 0px;

    &:focus + .file-picker {
        @extend .file-picker:hover
    }
}

